--- a/public/css/app.css
+++ b/public/css/app.css
@@ -41,3 +41,63 @@ h1, h2, h3, h4, h5 {
   margin: 0;
   padding: 0;
 }
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5rem;
+}
+.header_name {
+  color: var(--color-scale-gray-1);
+  font-size: 2.5rem;
+}
+.header_action > a {
+  text-decoration: none;
+  background-color: var(--color-scale-gray-5);
+  color: var(--color-scale-gray-1);
+  padding: 1rem 2rem;
+  border-radius: 0.6rem;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+main {
+  width: 80%;
+  margin: auto;
+}
+
+.pokemon_collection {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
+  grid-column-gap: 1rem;
+  grid-row-gap: 2.5rem;
+}
+.pokemon_collection-item {
+  text-decoration: none;
+}
+.pokemon_collection-image {
+  border: 1px solid var(--color-scale-gray-3);
+  border-radius: 0.6rem;
+}
+.pokemon_collection-image-item {
+  width: 100%;
+}
+.pokemon_collection-info {
+  margin: 0.8rem 0 0.8rem 0;
+}
+.pokemon_collection-info > span {
+  background-color: var(--color-scale-gray-1);
+  padding: 0.2rem 0.8rem;
+  border-radius: 0.4rem;
+}
+.pokemon_collection-name {
+  color: var(--color-scale-gray-2);
+  font-size: 1.1rem;
+}
