--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -42,3 +42,78 @@ h1, h2, h3, h4, h5 {
     margin: 0;
     padding: 0;
 }
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+//HEADER Start ------------------------------------------------------------------------------------------------
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5rem;
+
+    &_name {
+        color: var(--color-scale-gray-1);
+        font-size: 2.5rem;
+    }
+
+    &_action {
+        & > a {
+            text-decoration: none;
+            background-color: var(--color-scale-gray-5);
+            color: var(--color-scale-gray-1);
+            padding: 1rem 2rem;
+            border-radius: .6rem;
+            font-weight: 600;
+            font-size: .8rem;
+        }
+    }
+
+}
+//HEADER End ------------------------------------------------------------------------------------------------
+
+main {
+    width: 80%;
+    margin: auto;
+}
+//Pokemon Collection Start-------------------------------------------------------------------------------
+.pokemon_collection {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
+    grid-column-gap: 1rem;
+    grid-row-gap: 2.5rem;
+
+    &-item {
+        text-decoration: none;
+    }
+
+    &-image {
+        border: 1px solid var(--color-scale-gray-3);
+        border-radius: .6rem;
+
+        &-item {
+            width: 100%;
+        }
+    }
+
+    &-info {
+        margin: .8rem 0 .8rem 0;
+
+        & > span {
+            background-color: var(--color-scale-gray-1);
+            padding: .2rem .8rem;
+            border-radius: .4rem;
+        }
+    }
+
+    &-name {
+        color: var(--color-scale-gray-2);
+        font-size: 1.1rem;
+    }
+}
+//Pokemon Collection End-------------------------------------------------------------------------------
