create api to fetch pokemon list

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -114,6 +114,7 @@ main {
     &-name {
         color: var(--color-scale-gray-2);
         font-size: 1.1rem;
+        margin-bottom: .8rem;
     }
 }
 //Pokemon Collection End-------------------------------------------------------------------------------
