--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -110,10 +110,7 @@ main {
             font-weight: 800;
         }
     }
-    &-action {
 
-    }
-   
     &-btn {
         cursor: pointer;
         outline: none;
@@ -125,11 +122,10 @@ main {
             cursor: not-allowed;
         }
     }
-
-
 }
-
 //pagination end
+
+
 //Pokemon Collection Start-------------------------------------------------------------------------------
 .pokemon_collection {
     display: grid;
@@ -167,3 +163,98 @@ main {
     }
 }
 //Pokemon Collection End-------------------------------------------------------------------------------
+
+
+//Pokemon detail --------------------------------------------------------------------------------------
+.pokemon-detail {
+
+}
+
+.pokemon-info {
+    display: grid;
+    grid-template-columns: 25rem 1fr;
+    grid-column-gap: 5rem;
+    &-img {
+        border: 1px solid var(--color-scale-gray-1);
+        border-radius: .8rem;
+        margin-bottom: 1rem;
+        & > img {
+            width: 100%;
+        }
+    }
+
+    &-btn {
+        width: 100%;
+        border: none;
+        outline: none;
+        padding: .8rem;
+        color: #fff;
+        font-size: 1rem;
+        font-weight: 700;
+        cursor: pointer;
+        border-radius: .8rem;
+        &-capture {
+            background-color: #1A381D;
+        }
+    }
+    
+
+    &-desc {
+        &-name {
+            font-size: 2.2rem;
+            color: var(--color-scale-gray-2);
+            border-bottom: .1rem solid var(--color-scale-gray-2);
+        }
+        &-count {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-column-gap: 3rem;
+            margin-top: 3rem;
+            &-item {
+                border: 1px solid var(--color-scale-gray-3);
+                padding: 1rem;
+                & > h5 {
+                    color: var(--color-scale-gray-1);
+                    font-size: .9rem;
+                }
+                & > h2 {
+                    color: var(--color-scale-blue-6);
+                    font-weight: 800;
+                    font-size: 1.2rem;
+                }
+                & > div {
+                    color: var(--color-scale-gray-4);
+                }
+            }
+        }
+        &-type {
+            margin-top: 3rem;
+            & > h3 {
+                color: var(--color-scale-gray-2);
+                font-size: 1rem;
+                margin-bottom: 1rem;
+            }
+            & > span {
+                background-color: var(--color-scale-gray-2);
+                padding: .4rem 1rem;
+            }
+        }
+        &-abilities {
+            margin-top: 3rem;
+            & > h3 {
+                color: var(--color-scale-gray-2);
+                font-size: 1rem;
+                margin-bottom: 1rem;
+            }
+            & > span {
+                background-color: var(--color-scale-gray-2);
+                padding: .4rem 1rem;
+            }
+        }
+    }
+
+}
+
+
+
+//Pokemon detail --------------------------------------------------------------------------------------
