display detail pokemon from api

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -219,3 +219,6 @@ main {
   background-color: var(--color-scale-gray-2);
   padding: 0.4rem 1rem;
 }
+.pokemon-info-desc-abilities > span:not(:last-child) {
+  margin-right: 0.9rem;
+}
