--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -196,6 +196,9 @@ main {
         &-capture {
             background-color: #1A381D;
         }
+        &-release {
+            background-color: #FF5C58;
+        }
     }
     
 
@@ -257,7 +260,67 @@ main {
     }
 
 }
-
-
-
 //Pokemon detail --------------------------------------------------------------------------------------
+
+//Modal -----
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.7); 
+
+    &-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        & > h2 {
+            color: var(--color-scale-gray-1);
+        }
+    }
+
+    &-close {
+        cursor: pointer;
+        font-size: 2rem;
+        color: var(--color-scale-gray-1);
+    }
+
+    &-content {
+        background-color: var(--color-scale-gray-7);
+        margin: auto;
+        padding: 1rem;
+        border: 1px solid #888;
+        width: 40%;
+    }
+
+    &-action {
+        margin-top: 2rem;
+        display: flex;
+        justify-content: flex-end;
+
+        &-btn {
+            outline: none;
+            border: none;
+            padding: .5rem 1rem;
+            &:not(:last-child){
+                margin-right: .3rem;
+            }
+            cursor: pointer;
+
+            &-submit {
+                background-color: var(--color-scale-blue-7);
+                color: var(--color-scale-gray-1);
+            }
+        }
+
+    
+    }
+}
+//Modal -----
