update functionality capture method

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -257,6 +257,7 @@ main {
   margin: auto;
   padding: 1rem;
   border: 1px solid #888;
+  border-radius: 0.8rem;
   width: 40%;
 }
 .modal-action {
