--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -297,6 +297,7 @@ main {
         margin: auto;
         padding: 1rem;
         border: 1px solid #888;
+        border-radius: .8rem;
         width: 40%;
     }
 
