set label to pokemon was capture

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -123,6 +123,7 @@ main {
 .pokemon_collection-image {
   border: 1px solid var(--color-scale-gray-3);
   border-radius: 0.6rem;
+  position: relative;
 }
 .pokemon_collection-image-item {
   width: 100%;
@@ -131,7 +132,8 @@ main {
   margin: 0.8rem 0 0.8rem 0;
 }
 .pokemon_collection-info > span {
-  background-color: var(--color-scale-gray-1);
+  border: 1px solid #FF5C58;
+  color: #FF5C58;
   padding: 0.2rem 0.8rem;
   border-radius: 0.4rem;
 }
