--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -48,6 +48,19 @@ ul {
     padding: 0;
 }
 
+.navlink {
+    margin-bottom: 1rem;
+    & > a {
+        font-size: 1.2rem;
+        text-decoration: none;
+        color: var(--color-scale-gray-2);
+        font-weight: 800;
+
+        &:hover {
+            color: var(--color-scale-blue-7);
+        }
+    }
+}
 
 
 //HEADER Start ------------------------------------------------------------------------------------------------
@@ -169,7 +182,7 @@ main {
 
 //Pokemon detail --------------------------------------------------------------------------------------
 .pokemon-detail {
-
+   
 }
 
 .pokemon-info {
@@ -197,6 +210,11 @@ main {
         border-radius: .8rem;
         &-capture {
             background-color: #1A381D;
+
+            &:disabled {
+                cursor: not-allowed;
+                background-color: transparent;
+            }
         }       
     }
 
