--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,9 +67,25 @@ ul {
   align-items: center;
   padding: 5rem;
 }
+@media screen and (max-width: 34.8em) {
+  .header {
+    padding: 1.5rem;
+    margin-bottom: 2.5rem;
+  }
+}
 .header_name {
   color: var(--color-scale-gray-1);
   font-size: 2.5rem;
+}
+@media screen and (max-width: 42em) {
+  .header_name {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 25em) {
+  .header_name {
+    font-size: 0.8rem;
+  }
 }
 .header_name > span {
   font-size: 1.5rem;
@@ -83,6 +99,17 @@ ul {
   border-radius: 0.6rem;
   font-weight: 600;
   font-size: 0.8rem;
+}
+@media screen and (max-width: 34.8em) {
+  .header_action > a {
+    padding: 0.6rem 0.7rem;
+    font-size: 0.5rem;
+  }
+}
+@media screen and (max-width: 25em) {
+  .header_action > a {
+    padding: 0.1rem 0.6rem;
+  }
 }
 
 main {
@@ -105,9 +132,25 @@ main {
   align-items: center;
   margin-bottom: 1rem;
 }
+@media screen and (max-width: 34.8em) {
+  .pagination {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 33.7em) {
+  .pagination {
+    margin-bottom: 1.8rem;
+  }
+}
 .pagination-info {
   color: var(--color-scale-gray-2);
   font-size: 0.9rem;
+}
+@media screen and (max-width: 34.8em) {
+  .pagination-info {
+    align-self: flex-start;
+    margin-bottom: 1rem;
+  }
 }
 .pagination-info > span {
   font-weight: 800;
@@ -123,12 +166,22 @@ main {
   background-color: #ccc;
   cursor: not-allowed;
 }
+@media screen and (max-width: 25em) {
+  .pagination-btn {
+    padding: 0.1rem 0.6rem;
+  }
+}
 
 .pokemon_collection {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
   grid-column-gap: 1rem;
   grid-row-gap: 2.5rem;
+}
+@media screen and (max-width: 33.7em) {
+  .pokemon_collection {
+    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  }
 }
 .pokemon_collection-item {
   text-decoration: none;
@@ -155,11 +208,28 @@ main {
   font-size: 1.1rem;
   margin-bottom: 0.8rem;
 }
+@media screen and (max-width: 34.8em) {
+  .pokemon_collection-name {
+    font-size: 0.8rem;
+  }
+}
 
 .pokemon-info {
   display: grid;
   grid-template-columns: 25rem 1fr;
   grid-column-gap: 5rem;
+}
+@media screen and (max-width: 72.8em) {
+  .pokemon-info {
+    grid-template-columns: 15rem 1fr;
+    grid-column-gap: 2rem;
+  }
+}
+@media screen and (max-width: 51.8em) {
+  .pokemon-info {
+    grid-template-columns: 1fr;
+    grid-column-gap: 2rem;
+  }
 }
 .pokemon-info-img {
   border: 1px solid var(--color-scale-gray-1);
@@ -192,16 +262,33 @@ main {
   font-weight: 800;
   font-size: 0.8rem;
 }
+@media screen and (max-width: 34.8em) {
+  .pokemon-info-desc {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+  }
+}
 .pokemon-info-desc-name {
   font-size: 2.2rem;
   color: var(--color-scale-gray-2);
   border-bottom: 0.1rem solid var(--color-scale-gray-2);
+}
+@media screen and (max-width: 34.8em) {
+  .pokemon-info-desc-name {
+    font-size: 1.1rem;
+    padding-bottom: 0.8rem;
+  }
 }
 .pokemon-info-desc-count {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 3rem;
   margin-top: 3rem;
+}
+@media screen and (max-width: 51.8em) {
+  .pokemon-info-desc-count {
+    grid-template-columns: 1fr;
+  }
 }
 .pokemon-info-desc-count-item {
   border: 1px solid var(--color-scale-gray-3);
@@ -281,6 +368,11 @@ main {
   border-radius: 0.8rem;
   width: 40%;
 }
+@media screen and (max-width: 34.8em) {
+  .modal-content {
+    width: 80%;
+  }
+}
 .modal-action {
   margin-top: 2rem;
   display: flex;
@@ -304,6 +396,21 @@ main {
   width: 50%;
   margin: auto;
 }
+@media screen and (max-width: 58.9em) {
+  .myPokemon {
+    width: 70%;
+  }
+}
+@media screen and (max-width: 51.8em) {
+  .myPokemon {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 34.8em) {
+  .myPokemon {
+    width: 93%;
+  }
+}
 .myPokemon-search > input {
   width: 100%;
   background-color: var(--color-scale-gray-7);
@@ -323,6 +430,11 @@ main {
   display: flex;
   padding: 0.9rem;
   background-color: var(--color-scale-gray-7);
+}
+@media screen and (max-width: 34.8em) {
+  .myPokemon-collection-item {
+    flex-direction: column;
+  }
 }
 .myPokemon-collection-item:not(:last-child) {
   margin-bottom: 0.4rem;
