--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,3 +1,5 @@
+@import './variable';
+
 :root {
     --color-scale-gray-0: #f0f6fc;
     --color-scale-gray-1: #c9d1d9;
@@ -70,9 +72,22 @@ ul {
     align-items: center;
     padding: 5rem;
 
+    @media screen and (max-width: $bp-verysmall) {
+        padding: 1.5rem;
+        margin-bottom: 2.5rem;
+    }
+
     &_name {
         color: var(--color-scale-gray-1);
         font-size: 2.5rem;
+
+        @media screen and( max-width: $bp-small ) {
+            font-size: 1rem;
+        }
+
+        @media screen and (max-width: $bp-verytiny) {
+            font-size: .8rem;
+        }
 
         & > span {
             font-size: 1.5rem;
@@ -89,7 +104,18 @@ ul {
             border-radius: .6rem;
             font-weight: 600;
             font-size: .8rem;
+
+            @media screen and (max-width: $bp-verysmall) {
+                padding: .6rem .7rem;
+                font-size: .5rem;
+            }
+
+            @media screen and (max-width: $bp-verytiny) {
+                padding: .1rem .6rem;
+            }
         }
+
+
     }
 
 }
@@ -115,9 +141,24 @@ main {
     align-items: center;
     margin-bottom: 1rem;
 
+    @media screen and (max-width: $bp-verysmall) {
+       flex-direction: column;
+    }
+
+    @media screen and (max-width: $bp-tiny) {
+        margin-bottom: 1.8rem;
+     }
+
+   
+
     &-info {
         color: var(--color-scale-gray-2);
         font-size: .9rem;
+
+        @media screen and (max-width: $bp-verysmall) {
+            align-self: flex-start;
+            margin-bottom: 1rem;
+        }
 
         & > span {
             font-weight: 800;
@@ -134,6 +175,10 @@ main {
             background-color: #ccc;
             cursor: not-allowed;
         }
+
+        @media screen and (max-width: $bp-verytiny) {
+            padding: .1rem .6rem;
+        }
     }
 }
 //pagination end
@@ -145,6 +190,10 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
     grid-column-gap: 1rem;
     grid-row-gap: 2.5rem;
+
+    @media screen and (max-width: $bp-tiny) {
+        grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+    }
 
     &-item {
         text-decoration: none;
@@ -175,6 +224,10 @@ main {
         color: var(--color-scale-gray-2);
         font-size: 1.1rem;
         margin-bottom: .8rem;
+
+        @media screen and (max-width: $bp-verysmall) {
+            font-size: .8rem;
+         }
     }
 }
 //Pokemon Collection End-------------------------------------------------------------------------------
@@ -189,6 +242,19 @@ main {
     display: grid;
     grid-template-columns: 25rem 1fr;
     grid-column-gap: 5rem;
+
+
+
+    @media screen and (max-width: $bp-largest) {
+        grid-template-columns: 15rem 1fr;
+        grid-column-gap: 2rem;
+    }
+
+    @media screen and (max-width: $bp-medium) {
+        grid-template-columns: 1fr;
+        grid-column-gap: 2rem;
+    }
+
     &-img {
         border: 1px solid var(--color-scale-gray-1);
         border-radius: .8rem;
@@ -228,16 +294,28 @@ main {
     
 
     &-desc {
+        @media screen and (max-width: $bp-verysmall) {
+            margin-top: 2rem;
+            margin-bottom: 3rem;
+         }
         &-name {
             font-size: 2.2rem;
             color: var(--color-scale-gray-2);
             border-bottom: .1rem solid var(--color-scale-gray-2);
+            @media screen and (max-width: $bp-verysmall) {
+                font-size: 1.1rem;
+                padding-bottom: .8rem;
+             }
         }
         &-count {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             grid-column-gap: 3rem;
             margin-top: 3rem;
+
+            @media screen and (max-width: $bp-medium) {
+                grid-template-columns: 1fr;
+            }
             &-item {
                 border: 1px solid var(--color-scale-gray-3);
                 padding: 1rem;
@@ -324,6 +402,10 @@ main {
         border: 1px solid #888;
         border-radius: .8rem;
         width: 40%;
+
+        @media screen and (max-width: $bp-verysmall) {
+            width: 80%;
+        }
     }
 
     &-action {
@@ -356,6 +438,18 @@ main {
     width: 50%;
     margin: auto;
 
+    @media screen and (max-width: $bp-large) {
+        width: 70%;
+    }
+
+    @media screen and (max-width: $bp-medium) {
+        width: 80%;
+    }
+
+    @media screen and (max-width: $bp-verysmall) {
+        width: 93%;
+    }
+
     &-search {
         & > input {
             width: 100%;
@@ -379,6 +473,9 @@ main {
             padding: .9rem;
             background-color: var(--color-scale-gray-7);
 
+            @media screen and (max-width: $bp-verysmall) {
+                flex-direction: column;
+            }
             &:not(:last-child) {
                 margin-bottom: .4rem;
             }
@@ -417,6 +514,8 @@ main {
 
             &-action {
                 align-self: flex-end;
+
+                
 
                 & > button {
                     border: 1px solid #FF5C58;
