--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,480 +1,1 @@
-:root {
-  --color-scale-gray-0: #f0f6fc;
-  --color-scale-gray-1: #c9d1d9;
-  --color-scale-gray-2: #b1bac4;
-  --color-scale-gray-3: #8b949e;
-  --color-scale-gray-4: #6e7681;
-  --color-scale-gray-5: #484f58;
-  --color-scale-gray-6: #30363d;
-  --color-scale-gray-7: #21262d;
-  --color-scale-gray-8: #161b22;
-  --color-scale-gray-9: #0d1117;
-  --color-scale-blue-0: #cae8ff;
-  --color-scale-blue-1: #a5d6ff;
-  --color-scale-blue-2: #79c0ff;
-  --color-scale-blue-3: #58a6ff;
-  --color-scale-blue-4: #388bfd;
-  --color-scale-blue-5: #1f6feb;
-  --color-scale-blue-6: #1158c7;
-  --color-scale-blue-7: #0d419d;
-  --color-scale-blue-8: #0c2d6b;
-  --color-scale-blue-9: #051d4d;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  line-height: 1.6;
-  font-size: 62.5%;
-  background-color: var(--color-scale-gray-8);
-}
-
-h1, h2, h3, h4, h5 {
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navlink {
-  margin-bottom: 1rem;
-}
-.navlink > a {
-  font-size: 1.2rem;
-  text-decoration: none;
-  color: var(--color-scale-gray-2);
-  font-weight: 800;
-}
-.navlink > a:hover {
-  color: var(--color-scale-blue-7);
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 5rem;
-}
-@media screen and (max-width: 34.8em) {
-  .header {
-    padding: 1.5rem;
-    margin-bottom: 2.5rem;
-  }
-}
-.header_name {
-  color: var(--color-scale-gray-1);
-  font-size: 2.5rem;
-}
-@media screen and (max-width: 42em) {
-  .header_name {
-    font-size: 1rem;
-  }
-}
-@media screen and (max-width: 25em) {
-  .header_name {
-    font-size: 0.8rem;
-  }
-}
-.header_name > span {
-  font-size: 1.5rem;
-  color: var(--color-scale-blue-1);
-}
-.header_action > a {
-  text-decoration: none;
-  background-color: var(--color-scale-gray-5);
-  color: var(--color-scale-gray-1);
-  padding: 1rem 2rem;
-  border-radius: 0.6rem;
-  font-weight: 600;
-  font-size: 0.8rem;
-}
-@media screen and (max-width: 34.8em) {
-  .header_action > a {
-    padding: 0.6rem 0.7rem;
-    font-size: 0.5rem;
-  }
-}
-@media screen and (max-width: 25em) {
-  .header_action > a {
-    padding: 0.1rem 0.6rem;
-  }
-}
-
-main {
-  width: 80%;
-  margin: auto;
-}
-
-.loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  font-size: 1.3rem;
-  height: 50vh;
-}
-
-.pagination {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1rem;
-}
-@media screen and (max-width: 34.8em) {
-  .pagination {
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 33.7em) {
-  .pagination {
-    margin-bottom: 1.8rem;
-  }
-}
-.pagination-info {
-  color: var(--color-scale-gray-2);
-  font-size: 0.9rem;
-}
-@media screen and (max-width: 34.8em) {
-  .pagination-info {
-    align-self: flex-start;
-    margin-bottom: 1rem;
-  }
-}
-.pagination-info > span {
-  font-weight: 800;
-}
-.pagination-btn {
-  cursor: pointer;
-  outline: none;
-  border: none;
-  background-color: var(--color-scale-gray-1);
-  padding: 0.2rem 1rem;
-}
-.pagination-btn:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
-}
-@media screen and (max-width: 25em) {
-  .pagination-btn {
-    padding: 0.1rem 0.6rem;
-  }
-}
-
-.pokemon_collection {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
-  grid-column-gap: 1rem;
-  grid-row-gap: 2.5rem;
-}
-@media screen and (max-width: 33.7em) {
-  .pokemon_collection {
-    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
-  }
-}
-.pokemon_collection-item {
-  text-decoration: none;
-}
-.pokemon_collection-image {
-  border: 1px solid var(--color-scale-gray-3);
-  border-radius: 0.6rem;
-  position: relative;
-}
-.pokemon_collection-image-item {
-  width: 100%;
-}
-.pokemon_collection-info {
-  margin: 0.8rem 0 0.8rem 0;
-}
-.pokemon_collection-info > span {
-  border: 1px solid #FF5C58;
-  color: #FF5C58;
-  padding: 0.2rem 0.8rem;
-  border-radius: 0.4rem;
-}
-.pokemon_collection-name {
-  color: var(--color-scale-gray-2);
-  font-size: 1.1rem;
-  margin-bottom: 0.8rem;
-}
-@media screen and (max-width: 34.8em) {
-  .pokemon_collection-name {
-    font-size: 0.8rem;
-  }
-}
-
-.pokemon-info {
-  display: grid;
-  grid-template-columns: 25rem 1fr;
-  grid-column-gap: 5rem;
-}
-@media screen and (max-width: 72.8em) {
-  .pokemon-info {
-    grid-template-columns: 15rem 1fr;
-    grid-column-gap: 2rem;
-  }
-}
-@media screen and (max-width: 51.8em) {
-  .pokemon-info {
-    grid-template-columns: 1fr;
-    grid-column-gap: 2rem;
-  }
-}
-.pokemon-info-img {
-  border: 1px solid var(--color-scale-gray-1);
-  border-radius: 0.8rem;
-  margin-bottom: 1rem;
-}
-.pokemon-info-img > img {
-  width: 100%;
-}
-.pokemon-info-btn {
-  width: 100%;
-  border: none;
-  outline: none;
-  padding: 0.8rem;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: 700;
-  cursor: pointer;
-  border-radius: 0.8rem;
-}
-.pokemon-info-btn-capture {
-  background-color: #1A381D;
-}
-.pokemon-info-btn-capture:disabled {
-  cursor: not-allowed;
-  background-color: transparent;
-}
-.pokemon-info-action > span {
-  color: #FF5C58;
-  font-weight: 800;
-  font-size: 0.8rem;
-}
-@media screen and (max-width: 34.8em) {
-  .pokemon-info-desc {
-    margin-top: 2rem;
-    margin-bottom: 3rem;
-  }
-}
-.pokemon-info-desc-name {
-  font-size: 2.2rem;
-  color: var(--color-scale-gray-2);
-  border-bottom: 0.1rem solid var(--color-scale-gray-2);
-}
-@media screen and (max-width: 34.8em) {
-  .pokemon-info-desc-name {
-    font-size: 1.1rem;
-    padding-bottom: 0.8rem;
-  }
-}
-.pokemon-info-desc-count {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 3rem;
-  margin-top: 3rem;
-}
-@media screen and (max-width: 51.8em) {
-  .pokemon-info-desc-count {
-    grid-template-columns: 1fr;
-  }
-}
-.pokemon-info-desc-count-item {
-  border: 1px solid var(--color-scale-gray-3);
-  padding: 1rem;
-}
-.pokemon-info-desc-count-item > h5 {
-  color: var(--color-scale-gray-1);
-  font-size: 0.9rem;
-}
-.pokemon-info-desc-count-item > h2 {
-  color: var(--color-scale-blue-6);
-  font-weight: 800;
-  font-size: 1.2rem;
-}
-.pokemon-info-desc-count-item > div {
-  color: var(--color-scale-gray-4);
-}
-.pokemon-info-desc-type {
-  margin-top: 3rem;
-}
-.pokemon-info-desc-type > h3 {
-  color: var(--color-scale-gray-2);
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-.pokemon-info-desc-type > span {
-  background-color: var(--color-scale-gray-2);
-  padding: 0.4rem 1rem;
-}
-.pokemon-info-desc-abilities {
-  margin-top: 3rem;
-}
-.pokemon-info-desc-abilities > h3 {
-  color: var(--color-scale-gray-2);
-  font-size: 1rem;
-  margin-bottom: 1rem;
-}
-.pokemon-info-desc-abilities > span {
-  background-color: var(--color-scale-gray-2);
-  padding: 0.4rem 1rem;
-}
-.pokemon-info-desc-abilities > span:not(:last-child) {
-  margin-right: 0.9rem;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.modal-header > h2 {
-  color: var(--color-scale-gray-1);
-}
-.modal-close {
-  cursor: pointer;
-  font-size: 2rem;
-  color: var(--color-scale-gray-1);
-}
-.modal-content {
-  background-color: var(--color-scale-gray-7);
-  margin: auto;
-  padding: 1rem;
-  border: 1px solid #888;
-  border-radius: 0.8rem;
-  width: 40%;
-}
-@media screen and (max-width: 34.8em) {
-  .modal-content {
-    width: 80%;
-  }
-}
-.modal-action {
-  margin-top: 2rem;
-  display: flex;
-  justify-content: flex-end;
-}
-.modal-action-btn {
-  outline: none;
-  border: none;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-}
-.modal-action-btn:not(:last-child) {
-  margin-right: 0.3rem;
-}
-.modal-action-btn-submit {
-  background-color: var(--color-scale-blue-7);
-  color: var(--color-scale-gray-1);
-}
-
-.myPokemon {
-  width: 50%;
-  margin: auto;
-}
-@media screen and (max-width: 58.9em) {
-  .myPokemon {
-    width: 70%;
-  }
-}
-@media screen and (max-width: 51.8em) {
-  .myPokemon {
-    width: 80%;
-  }
-}
-@media screen and (max-width: 34.8em) {
-  .myPokemon {
-    width: 93%;
-  }
-}
-.myPokemon-search > input {
-  width: 100%;
-  background-color: var(--color-scale-gray-7);
-  outline: none;
-  border: none;
-  padding: 1rem;
-  color: var(--color-scale-gray-1);
-  border-radius: 0.3rem;
-}
-.myPokemon-collection {
-  margin-top: 2rem;
-}
-.myPokemon-collection > p {
-  color: var(--color-scale-gray-2);
-}
-.myPokemon-collection-item {
-  display: flex;
-  padding: 0.9rem;
-  background-color: var(--color-scale-gray-7);
-}
-@media screen and (max-width: 34.8em) {
-  .myPokemon-collection-item {
-    flex-direction: column;
-  }
-}
-.myPokemon-collection-item:not(:last-child) {
-  margin-bottom: 0.4rem;
-}
-.myPokemon-collection-item-image > img {
-  width: 100%;
-}
-.myPokemon-collection-item-info {
-  margin-right: auto;
-}
-.myPokemon-collection-item-info > h1 {
-  color: var(--color-scale-gray-2);
-}
-.myPokemon-collection-item-info-type {
-  margin-bottom: 0.5rem;
-}
-.myPokemon-collection-item-info-type > h4 {
-  color: var(--color-scale-gray-2);
-  margin-top: 0.8rem;
-  margin-bottom: 0.5rem;
-}
-.myPokemon-collection-item-info-type > span {
-  background-color: var(--color-scale-gray-2);
-  padding: 0.2rem;
-  color: var(--color-scale-gray-8);
-  font-weight: 600;
-  border-radius: 0.2rem;
-}
-.myPokemon-collection-item-info-type > span:not(:last-child) {
-  margin-right: 0.4rem;
-}
-.myPokemon-collection-item-action {
-  align-self: flex-end;
-}
-.myPokemon-collection-item-action > button {
-  border: 1px solid #FF5C58;
-  outline: none;
-  color: #FF5C58;
-  background-color: transparent;
-  padding: 0.5rem;
-  border-radius: 0.3rem;
-  cursor: pointer;
-}
+:root{--color-scale-gray-0:#f0f6fc;--color-scale-gray-1:#c9d1d9;--color-scale-gray-2:#b1bac4;--color-scale-gray-3:#8b949e;--color-scale-gray-4:#6e7681;--color-scale-gray-5:#484f58;--color-scale-gray-6:#30363d;--color-scale-gray-7:#21262d;--color-scale-gray-8:#161b22;--color-scale-gray-9:#0d1117;--color-scale-blue-0:#cae8ff;--color-scale-blue-1:#a5d6ff;--color-scale-blue-2:#79c0ff;--color-scale-blue-3:#58a6ff;--color-scale-blue-4:#388bfd;--color-scale-blue-5:#1f6feb;--color-scale-blue-6:#1158c7;--color-scale-blue-7:#0d419d;--color-scale-blue-8:#0c2d6b;--color-scale-blue-9:#051d4d}*{box-sizing:border-box}*,body{margin:0;padding:0}body{background-color:var(--color-scale-gray-8);font-family:Poppins,sans-serif;font-size:62.5%;font-weight:300;line-height:1.6}h1,h2,h3,h4,h5,ul{margin:0;padding:0}ul{list-style:none}.navlink{margin-bottom:1rem}.navlink>a{color:var(--color-scale-gray-2);font-size:1.2rem;font-weight:800;text-decoration:none}.navlink>a:hover{color:var(--color-scale-blue-7)}.header{align-items:center;display:flex;justify-content:space-between;padding:5rem}@media screen and (max-width:34.8em){.header{margin-bottom:2.5rem;padding:1.5rem}}.header_name{color:var(--color-scale-gray-1);font-size:2.5rem}@media screen and (max-width:42em){.header_name{font-size:1rem}}@media screen and (max-width:25em){.header_name{font-size:.8rem}}.header_name>span{color:var(--color-scale-blue-1);font-size:1.5rem}.header_action>a{background-color:var(--color-scale-gray-5);border-radius:.6rem;color:var(--color-scale-gray-1);font-size:.8rem;font-weight:600;padding:1rem 2rem;text-decoration:none}@media screen and (max-width:34.8em){.header_action>a{font-size:.5rem;padding:.6rem .7rem}}@media screen and (max-width:25em){.header_action>a{padding:.1rem .6rem}}main{margin:auto;width:80%}.loader{color:#fff;font-size:1.3rem;height:50vh;justify-content:center}.loader,.pagination{align-items:center;display:flex}.pagination{justify-content:space-between;margin-bottom:1rem}@media screen and (max-width:34.8em){.pagination{flex-direction:column}}@media screen and (max-width:33.7em){.pagination{margin-bottom:1.8rem}}.pagination-info{color:var(--color-scale-gray-2);font-size:.9rem}@media screen and (max-width:34.8em){.pagination-info{align-self:flex-start;margin-bottom:1rem}}.pagination-info>span{font-weight:800}.pagination-btn{background-color:var(--color-scale-gray-1);border:none;cursor:pointer;outline:none;padding:.2rem 1rem}.pagination-btn:disabled{background-color:#ccc;cursor:not-allowed}@media screen and (max-width:25em){.pagination-btn{padding:.1rem .6rem}}.pokemon_collection{grid-column-gap:1rem;grid-row-gap:2.5rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(13rem,1fr))}@media screen and (max-width:33.7em){.pokemon_collection{grid-template-columns:repeat(auto-fit,minmax(8rem,1fr))}}.pokemon_collection-item{text-decoration:none}.pokemon_collection-image{border:1px solid var(--color-scale-gray-3);border-radius:.6rem;position:relative}.pokemon_collection-image-item{width:100%}.pokemon_collection-info{margin:.8rem 0}.pokemon_collection-info>span{border:1px solid #ff5c58;border-radius:.4rem;color:#ff5c58;padding:.2rem .8rem}.pokemon_collection-name{color:var(--color-scale-gray-2);font-size:1.1rem;margin-bottom:.8rem}@media screen and (max-width:34.8em){.pokemon_collection-name{font-size:.8rem}}.pokemon-info{grid-column-gap:5rem;display:grid;grid-template-columns:25rem 1fr}@media screen and (max-width:72.8em){.pokemon-info{grid-column-gap:2rem;grid-template-columns:15rem 1fr}}@media screen and (max-width:51.8em){.pokemon-info{grid-column-gap:2rem;grid-template-columns:1fr}}.pokemon-info-img{border:1px solid var(--color-scale-gray-1);border-radius:.8rem;margin-bottom:1rem}.pokemon-info-img>img{width:100%}.pokemon-info-btn{border:none;border-radius:.8rem;color:#fff;cursor:pointer;font-size:1rem;font-weight:700;outline:none;padding:.8rem;width:100%}.pokemon-info-btn-capture{background-color:#1a381d}.pokemon-info-btn-capture:disabled{background-color:transparent;cursor:not-allowed}.pokemon-info-action>span{color:#ff5c58;font-size:.8rem;font-weight:800}@media screen and (max-width:34.8em){.pokemon-info-desc{margin-bottom:3rem;margin-top:2rem}}.pokemon-info-desc-name{border-bottom:.1rem solid var(--color-scale-gray-2);color:var(--color-scale-gray-2);font-size:2.2rem}@media screen and (max-width:34.8em){.pokemon-info-desc-name{font-size:1.1rem;padding-bottom:.8rem}}.pokemon-info-desc-count{grid-column-gap:3rem;display:grid;grid-template-columns:repeat(3,1fr);margin-top:3rem}@media screen and (max-width:51.8em){.pokemon-info-desc-count{grid-template-columns:1fr}}.pokemon-info-desc-count-item{border:1px solid var(--color-scale-gray-3);padding:1rem}.pokemon-info-desc-count-item>h5{color:var(--color-scale-gray-1);font-size:.9rem}.pokemon-info-desc-count-item>h2{color:var(--color-scale-blue-6);font-size:1.2rem;font-weight:800}.pokemon-info-desc-count-item>div{color:var(--color-scale-gray-4)}.pokemon-info-desc-type{margin-top:3rem}.pokemon-info-desc-type>h3{color:var(--color-scale-gray-2);font-size:1rem;margin-bottom:1rem}.pokemon-info-desc-type>span{background-color:var(--color-scale-gray-2);padding:.4rem 1rem}.pokemon-info-desc-abilities{margin-top:3rem}.pokemon-info-desc-abilities>h3{color:var(--color-scale-gray-2);font-size:1rem;margin-bottom:1rem}.pokemon-info-desc-abilities>span{background-color:var(--color-scale-gray-2);padding:.4rem 1rem}.pokemon-info-desc-abilities>span:not(:last-child){margin-right:.9rem}.modal{background-color:#000;background-color:rgba(0,0,0,.7);display:none;height:100%;left:0;overflow:auto;padding-top:100px;position:fixed;top:0;width:100%;z-index:1}.modal-header{align-items:center;display:flex;justify-content:space-between}.modal-close,.modal-header>h2{color:var(--color-scale-gray-1)}.modal-close{cursor:pointer;font-size:2rem}.modal-content{background-color:var(--color-scale-gray-7);border:1px solid #888;border-radius:.8rem;margin:auto;padding:1rem;width:40%}@media screen and (max-width:34.8em){.modal-content{width:80%}}.modal-action{display:flex;justify-content:flex-end;margin-top:2rem}.modal-action-btn{border:none;cursor:pointer;outline:none;padding:.5rem 1rem}.modal-action-btn:not(:last-child){margin-right:.3rem}.modal-action-btn-submit{background-color:var(--color-scale-blue-7);color:var(--color-scale-gray-1)}.myPokemon{margin:auto;width:50%}@media screen and (max-width:58.9em){.myPokemon{width:70%}}@media screen and (max-width:51.8em){.myPokemon{width:80%}}@media screen and (max-width:34.8em){.myPokemon{width:93%}}.myPokemon-search>input{background-color:var(--color-scale-gray-7);border:none;border-radius:.3rem;color:var(--color-scale-gray-1);outline:none;padding:1rem;width:100%}.myPokemon-collection{margin-top:2rem}.myPokemon-collection>p{color:var(--color-scale-gray-2)}.myPokemon-collection-item{background-color:var(--color-scale-gray-7);display:flex;padding:.9rem}@media screen and (max-width:34.8em){.myPokemon-collection-item{flex-direction:column}}.myPokemon-collection-item:not(:last-child){margin-bottom:.4rem}.myPokemon-collection-item-image>img{width:100%}.myPokemon-collection-item-info{margin-right:auto}.myPokemon-collection-item-info>h1{color:var(--color-scale-gray-2)}.myPokemon-collection-item-info-type{margin-bottom:.5rem}.myPokemon-collection-item-info-type>h4{color:var(--color-scale-gray-2);margin-bottom:.5rem;margin-top:.8rem}.myPokemon-collection-item-info-type>span{background-color:var(--color-scale-gray-2);border-radius:.2rem;color:var(--color-scale-gray-8);font-weight:600;padding:.2rem}.myPokemon-collection-item-info-type>span:not(:last-child){margin-right:.4rem}.myPokemon-collection-item-action{align-self:flex-end}.myPokemon-collection-item-action>button{background-color:transparent;border:1px solid #ff5c58;border-radius:.3rem;color:#ff5c58;cursor:pointer;outline:none;padding:.5rem}
